<resources>
    <string name="app_name">TestGolf1</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main_tab1">MainTab1Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_practice">연습</string>
    <string name="title_field">필드</string>
    <string name="title_community">커뮤</string>
    <string name="title_my">My</string>


    <string name="firebase_web_client_id">434087136742-5va0sucvaeg1atcncktpe73qj4l3ocmr.apps.googleusercontent.com</string>

</resources>