<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_practice"
        android:enabled="true"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_practice" />

    <item
        android:id="@+id/navigation_field"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_sports_golf_24"
        android:title="@string/title_field" />
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_forum_24"
        android:title="@string/title_home" />


    <item
        android:id="@+id/navigation_community"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_group_24"
        android:title="@string/title_community" />
    <item
        android:id="@+id/navigation_my"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_how_to_reg_24"
        android:title="@string/title_my" />

</menu>